choose-mirror (1.02) UNRELEASED; urgency=low

  * Kenshi Muto
    - Mark one templates string for translation.

 -- Kenshi Muto <kmuto@debian.org>  Mon, 23 Aug 2004 22:20:40 +0900

choose-mirror (1.01) unstable; urgency=low

  * Joey Hess
    - Fabbione noticed that we forgot to free(command).
    - Only ask what suite to use at medium priority.
    - Clean debian/{ftp,http}list-countries.
    - Allow preseeding of country or forcing of manual mirror entry via
      mirror/country. Closes: #240686, #266647, #266758

 -- Joey Hess <joeyh@debian.org>  Tue, 27 Jul 2004 10:59:41 -0400

choose-mirror (1.00) unstable; urgency=low

  * Updated translations: 
    - Arabic (ar.po) by Abdulaziz Al-Arfaj
    - Danish (da.po) by Frederik Dannemare
    - German (de.po) by Dennis Stampfer
    - Croatian (hr.po) by Krunoslav Gernhard

 -- Joey Hess <joeyh@debian.org>  Sun, 25 Jul 2004 19:27:38 -0400

choose-mirror (0.046) unstable; urgency=low

  * Denis Barbier (integrated by Christian Perrier)
    - sort countries
  * Bastian Blank
    - Update Installer-Menu-Item.
  * Joey Hess
    - Make sort-countries clean up after itself.
  * Christian Perrier
    - code for better handling of countries. Not used yet
  * Joshua Kwan
    - remove myself from Uploaders
  * Updated translations: 
    - Welsh (cy.po) by Dafydd Harries
    - Basque (eu.po) by Piarres Beobide Egaña
    - Persian (fa.po) by Arash Bijanzadeh
    - Korean (ko.po) by Changwoo Ryu
    - Norwegian Nynorsk (nn.po) by Håvard Korsvoll

 -- Joey Hess <joeyh@debian.org>  Sat, 17 Jul 2004 14:31:28 -0400

choose-mirror (0.045) unstable; urgency=low

  * Christian Perrier
    - Ellipsis typography fixed
  * Updated translations: 
    - Spanish (Castilian) (es.po) by Javier Fernández-Sanguino
    - Norwegian Nynorsk (nn.po) by Håvard Korsvoll
    - Polish (pl.po) by Bartosz Fenski
    - Russian (ru.po) by Nikolai Prokoschenko

 -- Joey Hess <joeyh@debian.org>  Tue, 25 May 2004 12:44:37 -0300
